apps/internal/pelican/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: svc-games
  labels:
    gitops: flux
