apps/internal/pelican/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pelican
  namespace: svc-games
spec:
  type: ClusterIP
  selector:
    app: pelican
  ports:
    - name: http
      port: 80
      targetPort: http
