apps/internal/pelican/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pelican
  namespace: svc-games
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: nginx-internal
  rules:
    - host: pelican.intern.rohrbom.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pelican
                port:
                  number: 80
  tls:
    - hosts:
        - pelican.intern.rohrbom.be
      secretName: pelican-tls
